--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por Maisson Costa.</p>
+        <p>Desenvolvido por Maisson Costa</p>
     </footer>
 </body>
 
